# serializer version: 1
# name: test_encode_contentlines[attendee]
  '''
  BEGIN:VEVENT
  ATTENDEE;RSVP=TRUE;ROLE=REQ-PARTICIPANT:mailto: jsmith@example.com
  ATTENDEE;DELEGATED-TO="mailto:jdoe@example.com","mailto:jqpublic 
   @example.com":mailto:jsmith@example.com
  END:VEVENT
  '''
# ---
# name: test_encode_contentlines[comma]
  '''
  BEGIN:VEVENT
  DESCRIPTION;ALTREP="cid:part1.0001@example.org":The Fall'98 Wild Wizards 
   Conference - - Las Vegas\, NV\, USA
  END:VEVENT
  '''
# ---
# name: test_encode_contentlines[fold]
  '''
  BEGIN:VEVENT
  DESCRIPTION:This is a lo ng description that exists on a long line.
  END:VEVENT
  '''
# ---
# name: test_encode_contentlines[icalendar_object]
  '''
  BEGIN:VCALENDAR
  VERSION:2.0
  PRODID:-//hacksw/handcal//NONSGML v1.0//EN
  BEGIN:VEVENT
  UID:19970610T172345Z-AF23B2@example.com
  DTSTAMP:19970610T172345Z
  DTSTART:19970714T170000Z
  DTEND:19970715T040000Z
  SUMMARY:Bastille Day Party
  END:VEVENT
  END:VCALENDAR
  '''
# ---
# name: test_encode_contentlines[params]
  '''
  BEGIN:VCALENDAR
  NAME;PARAM-NAME=PARAM-VALUE1:VALUE
  NAME;PARAM-NAME=PARAM+VALUE2:VALUE
  NAME;PARAM-NAME=PARAM VALUE3:VALUE
  NAME;PARAM-NAME="PARAM:VALUE4":VALUE
  DESCRIPTION:
  DESCRIPTION;TYPE=:
  END:VCALENDAR
  '''
# ---
# name: test_encode_contentlines[params_empty]
  '''
  BEGIN:VCALENDAR
  NAME;PARAM-NAME=:VALUE
  NAME;PARAM-NAME=,Value2,,VALUE4,VALUE5:VALUE
  END:VCALENDAR
  '''
# ---
# name: test_encode_contentlines[params_quoted]
  '''
  BEGIN:VCALENDAR
  NAME;PARAM-NAME=PARAM-VALUE:VALUE
  NAME;PARAM-NAME="PARAM:VALUE":VALUE
  END:VCALENDAR
  '''
# ---
# name: test_encode_contentlines[rdate]
  '''
  BEGIN:VCALENDAR
  RDATE;VALUE=DATE:19970304,19970504,19970704,19970904
  END:VCALENDAR
  '''
# ---
# name: test_encode_contentlines[unicode]
  '''
  BEGIN:VCALENDAR
  PRODID:-//ABC Corporation//NONSGML My Product//EN
  VERSION:2.0
  BEGIN:VTODO
  DTSTAMP:19980130T134500Z
  SEQUENCE:2
  UID:uid4@example.com
  DUE:19980415T000000
  STATUS:NEEDS-ACTION
  SUMMARY:Birthday
  BEGIN:VALARM
  ACTION:AUDIO
  TRIGGER:19980403T120000Z
  ATTACH;FILENAME=Fødselsdag_40.pdf:https://someurl.com
  REPEAT:4
  DURATION:PT1H
  END:VALARM
  END:VTODO
  END:VCALENDAR
  '''
# ---
# name: test_encode_contentlines[vcalendar_emoji]
  '''
  BEGIN:VEVENT
  DTSTAMP:20221202T075310
  UID:5deea302-7216-11ed-b1b6-48d2240d04ae
  DTSTART:20221202T085500
  DTEND:20221202T090000
  SUMMARY:🎄emojis!
  CREATED:20221202T075310
  SEQUENCE:0
  END:VEVENT
  '''
# ---
# name: test_encode_contentlines[vevent]
  '''
  BEGIN:VEVENT
  UID:19970901T130000Z-123401@example.com
  DTSTAMP:19970901T130000Z
  DTSTART:19970903T163000Z
  DTEND:19970903T190000Z
  SUMMARY:Annual Employee Review
  CLASS:PRIVATE
  CATEGORIES:BUSINESS,HUMAN RESOURCES
  END:VEVENT
  '''
# ---
# name: test_encode_contentlines[vtodo]
  '''
  BEGIN:VTODO
  UID:20070313T123432Z-456553@example.com
  DTSTAMP:20070313T123432Z
  DUE;VALUE=DATE:20070501
  SUMMARY:Submit Quebec Income Tax Return for 2006
  CLASS:CONFIDENTIAL
  CATEGORIES:FAMILY,FINANCE
  STATUS:NEEDS-ACTION
  END:VTODO
  '''
# ---
# name: test_encode_contentlines[x-name]
  '''
  BEGIN:VEVENT
  X-DESCRIPTION:This is a description
  X-ICAL-DESCRIPTION:This is a description
  X-ICAL-1:This is another x-name
  END:VEVENT
  '''
# ---
# name: test_invalid_contentlines[invalid]
  tuple(
    'Failed to parse calendar contents',
    "Invalid property line, expected (';', ':') after property name",
  )
# ---
# name: test_invalid_contentlines[invalid_iana-token]
  tuple(
    'Failed to parse calendar contents',
    "Invalid property name 'DES.RIPTION'",
  )
# ---
# name: test_invalid_contentlines[invalid_param_eol copy]
  tuple(
    'Failed to parse calendar contents',
    'Unexpected end of line: unclosed quoted parameter value.',
  )
# ---
# name: test_invalid_contentlines[invalid_param_eol_quoted]
  tuple(
    'Failed to parse calendar contents',
    'Unexpected end of line: missing parameter value delimiter.',
  )
# ---
# name: test_invalid_contentlines[invalid_param_name-1]
  tuple(
    'Failed to parse calendar contents',
    "Invalid parameter name 'PARAM NAME'",
  )
# ---
# name: test_invalid_contentlines[invalid_param_name-2]
  tuple(
    'Failed to parse calendar contents',
    "Invalid parameter name 'PARAM+NAME'",
  )
# ---
# name: test_invalid_contentlines[invalid_param_value]
  tuple(
    'Failed to parse calendar contents',
    "Invalid parameter format: missing '=' after parameter name part ';:VALUE'",
  )
# ---
# name: test_invalid_contentlines[invalid_params_list]
  tuple(
    'Failed to parse calendar contents',
    'Unexpected end of line. Expected parameter value or delimiter.',
  )
# ---
# name: test_invalid_contentlines[invalid_quoted_missing_value]
  tuple(
    'Failed to parse calendar contents',
    "Unexpected end of line after parameter value 'PARAM-VAL'. Expected delimiter (',', ';', ':').",
  )
# ---
# name: test_invalid_contentlines[invalid_quoted_name]
  tuple(
    'Failed to parse calendar contents',
    'Invalid property name \'"NAME"\'',
  )
# ---
# name: test_invalid_contentlines[invalid_quoted_param_extra_end]
  tuple(
    'Failed to parse calendar contents',
    "Expected (',', ';', ':') after parameter value, got 'e'",
  )
# ---
# name: test_invalid_contentlines[invalid_quoted_param_extra_start]
  tuple(
    'Failed to parse calendar contents',
    'Parameter value \'extra"QUOTED-VALUE"\' for parameter \'PARAM-NAME\' is improperly quotes',
  )
# ---
# name: test_invalid_contentlines[invalid_quoted_params]
  tuple(
    'Failed to parse calendar contents',
    'Unexpected end of line: unclosed quoted parameter value.',
  )
# ---
# name: test_invalid_contentlines[invalid_x-name-1]
  tuple(
    'Failed to parse calendar contents',
    "Invalid property name 'X-DES.RIPTION'",
  )
# ---
# name: test_invalid_contentlines[invalid_x-name-2]
  tuple(
    'Failed to parse calendar contents',
    "Invalid property name 'X-,'",
  )
# ---
# name: test_invalid_contentlines[missing_colon]
  tuple(
    'Failed to parse calendar contents',
    "Invalid parameter format: missing '=' after parameter name part 'This is a description'",
  )
# ---
# name: test_parse_contentlines[attendee]
  list([
    dict({
      'name': 'vevent',
      'properties': list([
        dict({
          'name': 'attendee',
          'params': list([
            dict({
              'name': 'RSVP',
              'values': list([
                'TRUE',
              ]),
            }),
            dict({
              'name': 'ROLE',
              'values': list([
                'REQ-PARTICIPANT',
              ]),
            }),
          ]),
          'value': 'mailto: jsmith@example.com',
        }),
        dict({
          'name': 'attendee',
          'params': list([
            dict({
              'name': 'DELEGATED-TO',
              'values': list([
                'mailto:jdoe@example.com',
                'mailto:jqpublic @example.com',
              ]),
            }),
          ]),
          'value': 'mailto:jsmith@example.com',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[comma]
  list([
    dict({
      'name': 'vevent',
      'properties': list([
        dict({
          'name': 'description',
          'params': list([
            dict({
              'name': 'ALTREP',
              'values': list([
                'cid:part1.0001@example.org',
              ]),
            }),
          ]),
          'value': "The Fall'98 Wild Wizards Conference - - Las Vegas\\, NV\\, USA",
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[fold]
  list([
    dict({
      'name': 'vevent',
      'properties': list([
        dict({
          'name': 'description',
          'params': None,
          'value': 'This is a lo ng description that exists on a long line.',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[icalendar_object]
  list([
    dict({
      'components': list([
        dict({
          'components': list([
          ]),
          'name': 'vevent',
          'properties': list([
            dict({
              'name': 'uid',
              'params': None,
              'value': '19970610T172345Z-AF23B2@example.com',
            }),
            dict({
              'name': 'dtstamp',
              'params': None,
              'value': '19970610T172345Z',
            }),
            dict({
              'name': 'dtstart',
              'params': None,
              'value': '19970714T170000Z',
            }),
            dict({
              'name': 'dtend',
              'params': None,
              'value': '19970715T040000Z',
            }),
            dict({
              'name': 'summary',
              'params': None,
              'value': 'Bastille Day Party',
            }),
          ]),
        }),
      ]),
      'name': 'vcalendar',
      'properties': list([
        dict({
          'name': 'version',
          'params': None,
          'value': '2.0',
        }),
        dict({
          'name': 'prodid',
          'params': None,
          'value': '-//hacksw/handcal//NONSGML v1.0//EN',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[params]
  list([
    dict({
      'name': 'vcalendar',
      'properties': list([
        dict({
          'name': 'name',
          'params': list([
            dict({
              'name': 'PARAM-NAME',
              'values': list([
                'PARAM-VALUE1',
              ]),
            }),
          ]),
          'value': 'VALUE',
        }),
        dict({
          'name': 'name',
          'params': list([
            dict({
              'name': 'PARAM-NAME',
              'values': list([
                'PARAM+VALUE2',
              ]),
            }),
          ]),
          'value': 'VALUE',
        }),
        dict({
          'name': 'name',
          'params': list([
            dict({
              'name': 'PARAM-NAME',
              'values': list([
                'PARAM VALUE3',
              ]),
            }),
          ]),
          'value': 'VALUE',
        }),
        dict({
          'name': 'name',
          'params': list([
            dict({
              'name': 'PARAM-NAME',
              'values': list([
                'PARAM:VALUE4',
              ]),
            }),
          ]),
          'value': 'VALUE',
        }),
        dict({
          'name': 'description',
          'params': None,
          'value': '',
        }),
        dict({
          'name': 'description',
          'params': list([
            dict({
              'name': 'TYPE',
              'values': list([
                '',
              ]),
            }),
          ]),
          'value': '',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[params_empty]
  list([
    dict({
      'name': 'vcalendar',
      'properties': list([
        dict({
          'name': 'name',
          'params': list([
            dict({
              'name': 'PARAM-NAME',
              'values': list([
                '',
              ]),
            }),
          ]),
          'value': 'VALUE',
        }),
        dict({
          'name': 'name',
          'params': list([
            dict({
              'name': 'PARAM-NAME',
              'values': list([
                '',
                'Value2',
                '',
                'VALUE4',
                'VALUE5',
              ]),
            }),
          ]),
          'value': 'VALUE',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[params_quoted]
  list([
    dict({
      'name': 'vcalendar',
      'properties': list([
        dict({
          'name': 'name',
          'params': list([
            dict({
              'name': 'PARAM-NAME',
              'values': list([
                'PARAM-VALUE',
              ]),
            }),
          ]),
          'value': 'VALUE',
        }),
        dict({
          'name': 'name',
          'params': list([
            dict({
              'name': 'PARAM-NAME',
              'values': list([
                'PARAM:VALUE',
              ]),
            }),
          ]),
          'value': 'VALUE',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[rdate]
  list([
    dict({
      'name': 'vcalendar',
      'properties': list([
        dict({
          'name': 'rdate',
          'params': list([
            dict({
              'name': 'VALUE',
              'values': list([
                'DATE',
              ]),
            }),
          ]),
          'value': '19970304,19970504,19970704,19970904',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[unicode]
  list([
    dict({
      'components': list([
        dict({
          'components': list([
            dict({
              'components': list([
              ]),
              'name': 'valarm',
              'properties': list([
                dict({
                  'name': 'action',
                  'params': None,
                  'value': 'AUDIO',
                }),
                dict({
                  'name': 'trigger',
                  'params': None,
                  'value': '19980403T120000Z',
                }),
                dict({
                  'name': 'attach',
                  'params': list([
                    dict({
                      'name': 'FILENAME',
                      'values': list([
                        'Fødselsdag_40.pdf',
                      ]),
                    }),
                  ]),
                  'value': 'https://someurl.com',
                }),
                dict({
                  'name': 'repeat',
                  'params': None,
                  'value': '4',
                }),
                dict({
                  'name': 'duration',
                  'params': None,
                  'value': 'PT1H',
                }),
              ]),
            }),
          ]),
          'name': 'vtodo',
          'properties': list([
            dict({
              'name': 'dtstamp',
              'params': None,
              'value': '19980130T134500Z',
            }),
            dict({
              'name': 'sequence',
              'params': None,
              'value': '2',
            }),
            dict({
              'name': 'uid',
              'params': None,
              'value': 'uid4@example.com',
            }),
            dict({
              'name': 'due',
              'params': None,
              'value': '19980415T000000',
            }),
            dict({
              'name': 'status',
              'params': None,
              'value': 'NEEDS-ACTION',
            }),
            dict({
              'name': 'summary',
              'params': None,
              'value': 'Birthday',
            }),
          ]),
        }),
      ]),
      'name': 'vcalendar',
      'properties': list([
        dict({
          'name': 'prodid',
          'params': None,
          'value': '-//ABC Corporation//NONSGML My Product//EN',
        }),
        dict({
          'name': 'version',
          'params': None,
          'value': '2.0',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[vcalendar_emoji]
  list([
    dict({
      'name': 'vevent',
      'properties': list([
        dict({
          'name': 'dtstamp',
          'params': None,
          'value': '20221202T075310',
        }),
        dict({
          'name': 'uid',
          'params': None,
          'value': '5deea302-7216-11ed-b1b6-48d2240d04ae',
        }),
        dict({
          'name': 'dtstart',
          'params': None,
          'value': '20221202T085500',
        }),
        dict({
          'name': 'dtend',
          'params': None,
          'value': '20221202T090000',
        }),
        dict({
          'name': 'summary',
          'params': None,
          'value': '🎄emojis!',
        }),
        dict({
          'name': 'created',
          'params': None,
          'value': '20221202T075310',
        }),
        dict({
          'name': 'sequence',
          'params': None,
          'value': '0',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[vevent]
  list([
    dict({
      'name': 'vevent',
      'properties': list([
        dict({
          'name': 'uid',
          'params': None,
          'value': '19970901T130000Z-123401@example.com',
        }),
        dict({
          'name': 'dtstamp',
          'params': None,
          'value': '19970901T130000Z',
        }),
        dict({
          'name': 'dtstart',
          'params': None,
          'value': '19970903T163000Z',
        }),
        dict({
          'name': 'dtend',
          'params': None,
          'value': '19970903T190000Z',
        }),
        dict({
          'name': 'summary',
          'params': None,
          'value': 'Annual Employee Review',
        }),
        dict({
          'name': 'class',
          'params': None,
          'value': 'PRIVATE',
        }),
        dict({
          'name': 'categories',
          'params': None,
          'value': 'BUSINESS,HUMAN RESOURCES',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[vtodo]
  list([
    dict({
      'name': 'vtodo',
      'properties': list([
        dict({
          'name': 'uid',
          'params': None,
          'value': '20070313T123432Z-456553@example.com',
        }),
        dict({
          'name': 'dtstamp',
          'params': None,
          'value': '20070313T123432Z',
        }),
        dict({
          'name': 'due',
          'params': list([
            dict({
              'name': 'VALUE',
              'values': list([
                'DATE',
              ]),
            }),
          ]),
          'value': '20070501',
        }),
        dict({
          'name': 'summary',
          'params': None,
          'value': 'Submit Quebec Income Tax Return for 2006',
        }),
        dict({
          'name': 'class',
          'params': None,
          'value': 'CONFIDENTIAL',
        }),
        dict({
          'name': 'categories',
          'params': None,
          'value': 'FAMILY,FINANCE',
        }),
        dict({
          'name': 'status',
          'params': None,
          'value': 'NEEDS-ACTION',
        }),
      ]),
    }),
  ])
# ---
# name: test_parse_contentlines[x-name]
  list([
    dict({
      'name': 'vevent',
      'properties': list([
        dict({
          'name': 'x-description',
          'params': None,
          'value': 'This is a description',
        }),
        dict({
          'name': 'x-ical-description',
          'params': None,
          'value': 'This is a description',
        }),
        dict({
          'name': 'x-ical-1',
          'params': None,
          'value': 'This is another x-name',
        }),
      ]),
    }),
  ])
# ---
